Add appreciation to Mike

--- a/index.html
+++ b/index.html
@@ -191,5 +191,8 @@ The blue color is the population for man and the pink is for woman.
 <p>
 Data from <a href='http://www.ris.gov.tw/en/web/ris3-english/home'>Taiwan Department of Household Registration</a>.
 </p>
+<p>
+Adapted from <a href='https://bl.ocks.org/mbostock/4062085'>Mike Bostock's example</a>.
+</p>
 
 </body>
